# mdi

./: Cargo.toml  LICENSE  README.md
examples/app/: Cargo.toml
examples/app/src/: di.rs  main.rs
examples/cache/: Cargo.toml
examples/cache/src/: di.rs  lib.rs
examples/mailer/: Cargo.toml
examples/mailer/src/: di.rs  lib.rs
mdi/: Cargo.toml
mdi-macros/: Cargo.toml  README.md
mdi-macros/src/: lib.rs
mdi/src/: lib.rs
