[package]
name = "mdi-macros"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
repository = "https://github.com/jmjoy/mdi"
readme = "README.md"
license = "MIT"
keywords = ["di", "ioc"]
description = "Proc macros for `mdi`."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
syn = { version = "1.0.38", features = ["full"] }
proc-macro2 = "1.0.19"
