[package]
name = "mdi"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
repository = "https://github.com/jmjoy/mdi"
readme = "README.md"
license = "MIT"
keywords = ["di", "ioc"]
description = "Macro-base Dependency Injection."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
mdi-macros = { version = "0.0.0", path = "../mdi-macros" }
