[package]
name = "app"
version = "0.0.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"
repository = "https://github.com/jmjoy/mdi"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdi = { path = "../../mdi" }
cache = { path = "../cache" }
mailer = { path = "../mailer" }
